# nanobind-segfault

./: .gitignore  CMakeLists.txt  pyproject.toml
.github/workflows/: pip.yml
src/: CMakeLists.txt  mod.cpp
src/nanobind_segfault/: __init__.py
test/: test_class.py
