# Copyright (C) 2024 Roberto Rossini <roberros@uio.no>
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
  "nanobind==2.2.0",
  "scikit-build-core>=0.10",
  "typing_extensions",
]

build-backend = "scikit_build_core.build"

[project]
name = "nanobind_segfault"
dynamic = ["version"]
authors = [
  {name = "Roberto Rossini", email = "roberros@uio.no"}
]
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License"
]

optional-dependencies.test = [
  "pytest>=8.0"
]

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/_version.py"]
wheel.expand-macos-universal-tags = true
cmake.build-type = "Release"

[tool.setuptools_scm]
write_to = "src/_version.py"

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.isort]
profile = "black"
